--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "url": "https://github.com/Erdogan-Hared11/FinalProjectUOB/issues"
   },
   "homepage": "https://github.com/Erdogan-Hared11/FinalProjectUOB#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  }
 }
